# liblk-cpp

./: CMakeLists.txt  README.md  liblk.pc.in
liblk/: LkExtHeader.cpp  LkHeader.cpp  LkImage.cpp  LkPartition.cpp
liblk/include/: Common.h  LkExtHeader.h  LkHeader.h  LkImage.h  LkPartition.h  Magic.h  Utils.h  liblk.h
